# immer-archive

./: .gitignore  CMakeLists.txt  README.md  derivation.nix  dev-shell.nix  flake.nix  justfile  suppr.txt
immer-archive/: errors.hpp  node_ptr.hpp
immer-archive/champ/: archive.hpp  archive_champ.hpp  champ.hpp  load.hpp  save.hpp  traits.hpp
immer-archive/common/: archive.hpp
immer-archive/json/: archivable.hpp  json_with_archive.hpp
immer-archive/rbts/: archive.hpp  load.hpp  save.hpp  traits.hpp  traverse.hpp  vector.hpp
immer-test/: CMakeLists.txt  immer_archive.hpp  immer_champ_archive.hpp  immer_champ_load.hpp  immer_champ_save.hpp  immer_save.hpp  json_immer.hpp  json_with_archive.hpp  main.cpp  node_ptr.hpp  rbtree_builder.hpp  vec01.json  with_archive.hpp  with_archive_adapter.hpp
immer-test.xcodeproj/: project.pbxproj
immer-test.xcodeproj/xcshareddata/xcschemes/: immer-test-release.xcscheme  immer-test.xcscheme
immer-test.xcodeproj/xcuserdata/alex.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
immer-test.xcodeproj/xcuserdata/alex.xcuserdatad/xcschemes/: xcschememanagement.plist
immer-test/adapter/: adapter.hpp  save_archive.hpp  save_prologue_epilogue.hpp
immer-test/bnz/: immer_map.hpp  immer_vector.hpp
immer-test/cmake/: provider.cmake
immer-test/immer-archive/: node_ptr.hpp  to_string.hpp
immer-test/immer-archive/champ/: archive.hpp  archive_champ.hpp  archive_map.hpp  archive_set.hpp  champ.hpp  load.hpp  map.hpp  set.hpp  traits.hpp
immer-test/immer-archive/json/: archivable.hpp  json_immer.hpp  json_with_archive.hpp
immer-test/immer-archive/rbts/: archive.hpp  load.hpp  save.hpp  vector.hpp
immer-test/immer/immer/: map.hpp  set.hpp  table.hpp  vector.hpp
immer-test/immer/immer/detail/rbts/: node.hpp
immer-test/test/: test_champ.cpp  test_data.hpp  test_special_archive.cpp  test_struct_with_archive.cpp  test_vectors.cpp  utils.hpp
immer-test/test/data/: flex_concat.json  flex_vec01.json  huge_vectors.json  vec01.json  vec66.json  vec7.json
immer-test/test/fuzz/: fuzz_set.cpp
immer-test/test/google-fuzz/: CMakeLists.txt  first_fuzz_test.cc
test/: CMakeLists.txt  test_champ.cpp  test_includes.cpp  test_special_archive.cpp  test_vectors.cpp  test_xxhash.cpp  utils.hpp  valgrind.supp
test/data/: flex_vec01.json  vec7.json
test/fuzz/: CMakeLists.txt  flex-vector.cpp  fuzz_set.cpp
